vlib/v/checker/tests/enum_field_overflow.vv
enum Color {
	red
	green = 2147483647
	blue
}
